test/library/standard/Random/stonea/fillRandomAssociative.good
fillRandomAssociative.chpl:5: error: 'fillRandom' does not support non-rectangular arrays
